# mc-atlas-uv-resolver

./: .gitignore  .pre-commit-config.yaml  LICENSE  pyproject.toml
.github/workflows/: release.yml
mc_atlas_uv_resolver/: __main__.py  cli.py  convert.py  utils.py  uvs.py
scripts/: Settings.py  generate_asset_uvs.py  generate_resources.py  generate_uvs.py  mojang.py  utils.py
